Fix and cleanup